--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^5.0.0",
+    "@headlessui/react": "^1.7.16",
+    "@heroicons/react": "^2.0.18",
+    "@prisma/client": "^5.1.1",
+    "@supabase/auth-helpers-nextjs": "^0.7.4",
+    "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/auth-ui-react": "^0.4.2",
+    "@supabase/auth-ui-shared": "^0.1.6",
+    "@supabase/supabase-js": "^2.32.0",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.26.0",
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "antd": "^5.8.2",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
