--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
     "antd": "^5.8.2",
+    "dayjs": "^1.11.9",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
