--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/auth-ui-shared": "^0.1.6",
     "@supabase/supabase-js": "^2.32.0",
     "@t3-oss/env-nextjs": "^0.3.1",
+    "@tailwindcss/forms": "^0.5.4",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.26.0",
     "@trpc/next": "^10.26.0",
