--- a/extension/package.json
+++ b/extension/package.json
@@ -16,16 +16,21 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.0",
+    "@tailwindcss/forms": "^0.5.4",
     "@types/chrome": "0.0.241",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
     "prettier": "3.0.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
   },
   "manifest": {
     "host_permissions": [
       "https://*/*",
+      "http://*/*",
       "*://to/*",
       "*://*.wayto.website/*"
     ],
@@ -46,6 +51,6 @@
     ],
     "omnibox": {
       "keyword": "to"
-   }
+    }
   }
 }
