--- a/extension/package.json
+++ b/extension/package.json
@@ -10,9 +10,15 @@
     "test": "plasmo test"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@mantine/form": "^6.0.18",
+    "@tanstack/react-query": "^4.32.6",
+    "antd": "^5.8.2",
+    "axios": "^1.4.0",
     "plasmo": "0.82.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.0",
